--- a/src/index.css
+++ b/src/index.css
@@ -176,7 +176,7 @@ progress {
   color: var(--color-light);
   border-radius: 100px;
   text-align: center;
-  padding: 2rem 0;
+  padding: 2rem;
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 1.6rem;
@@ -205,7 +205,7 @@ progress {
 }
 
 .timer {
-  float: left;
+  float: right;
   font-size: 1.8rem;
   color: var(--color-medium);
   border: 2px solid var(--color-dark);
